Fixed color contrast errors reported by Wave tool

--- a/web/css/layout/_minicart.less
+++ b/web/css/layout/_minicart.less
@@ -310,7 +310,6 @@
             .right(0);
             a {
                 display: flex;
-                --muted-alpha: .2;
                 color: @muted__color;
             }
         }
@@ -342,7 +341,7 @@
                 &:extend(.transition all);
             }
             a:hover {
-                --muted-alpha: .4;
+                --muted-alpha: .9;
             }
         }
     }
